Fix: fixed button alignments

--- a/src/components/sign-in/sign-in.styles.scss
+++ b/src/components/sign-in/sign-in.styles.scss
@@ -62,6 +62,11 @@
       }
     }
   }
+
+  button {
+    margin-bottom: 10px;
+    margin-top: 10px;
+  }
 }
 
 @media screen and (max-width: 768px) {
